termine footer mobile et responsive

--- a/restaurants/menu1.html
+++ b/restaurants/menu1.html
@@ -4,29 +4,55 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Oh My Food</title>
+    <title>Menu - La palette du goût</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Shrikhand&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Shrikhand&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="../assets/css/main.css">
 </head>
 <body>
+
+    <!--***** Le Loader *****-->
+
+    <div class="loader">
+        <div class="loader__text">
+        <span>O</span>
+        <span>h</span>
+        <span>m</span>
+        <span>y</span>
+        <span>f</span>
+        <span>o</span>
+        <span>o</span>
+        <span>d</span>
+        </div>
+    </div>
+
+    <!--***** Le Header *****-->
+
     <header class="header">
-        <img class="header__logo" src="04--OhMyFood/assets/images/logo/ohmyfood@2x.svg" alt="logo oh my food">
+
+        <img class="header__logo" src="../assets/images/logo/ohmyfood@2x.svg" alt="logo oh my food">
     </header>
-    <main class="main-wrapper">
-    </main>
+
+    <!--***** Le Menu *****-->
+
+    <section>
+
+    </section>
+
+    <!--***** Le Footer *****-->
+
     <footer class="footer">
         <h4 class="footer__title">ohmyfood</h4>
         <ul class="footer__list">
             <li class="footer__list--grand">
-                <a href=""><img src="04--OhMyFood/assets/images/logo/fork-knife.svg" alt="logo de fouchette et couteau">&nbsp Proposer un restaurant</a>
+                <a href=""><img src="../assets/images/icon/fork-knife.svg" alt="logo de fouchette et couteau">&nbsp; Proposer un restaurant</a>
             </li>
             <li class="footer__list--grand">
-                <a href=""><img src="04--OhMyFood/assets/images/logo/handshake.svg" alt="logo de poignee de main">&nbsp Devenir partenaire</a>
+                <a href=""><img src="../assets/images/icon/handshake.svg" alt="logo de poignee de main">&nbsp; Devenir partenaire</a>
             </li>
             <li class="footer__list--petit">
                 <a href="">Mentions légales</a>
