--- a/index.html
+++ b/index.html
@@ -118,21 +118,23 @@
     <!--***** Le Footer *****-->
 
     <footer class="footer">
-        <h4 class="footer__title">ohmyfood</h4>
-        <ul class="footer__list">
-            <li class="footer__list--grand">
-                <a href=""><img src="./assets/images/logo/fork-knife.svg" alt="logo de fouchette et couteau">&nbsp; Proposer un restaurant</a>
-            </li>
-            <li class="footer__list--grand">
-                <a href=""><img src="./assets/images/logo/handshake.svg" alt="logo de poignee de main">&nbsp; Devenir partenaire</a>
-            </li>
-            <li class="footer__list--petit">
-                <a href="">Mentions légales</a>
-            </li>
-            <li class="footer__list--petit">
-                <a href="mailto:contact@ohmyfood.fr">Contact</a>
-            </li>
-        </ul>
+        <div class="footer__container">
+            <h4 class="footer__title">ohmyfood</h4>
+            <ul class="footer__list">
+                <li class="footer__list--grand">
+                    <a href=""><img src="./assets/images/icon/fork-knife.svg" alt="logo de fouchette et couteau">&nbsp; Proposer un restaurant</a>
+                </li>
+                <li class="footer__list--grand">
+                    <a href=""><img src="./assets/images/icon/handshake.svg" alt="logo de poignee de main">&nbsp; Devenir partenaire</a>
+                </li>
+                <li class="footer__list--petit">
+                    <a href="">Mentions légales</a>
+                </li>
+                <li class="footer__list--petit">
+                    <a href="mailto:contact@ohmyfood.fr">Contact</a>
+                </li>
+            </ul>
+        </div>
     </footer>
 </body>
 </html>
