--- a/restaurants/menu1.html
+++ b/restaurants/menu1.html
@@ -18,49 +18,60 @@
     <!--***** Le Loader *****-->
 
     <div class="loader">
-        <div class="loader__text">
-        <span>O</span>
-        <span>h</span>
-        <span>m</span>
-        <span>y</span>
-        <span>f</span>
-        <span>o</span>
-        <span>o</span>
+        <div class="loader__palette">
+        <span>L</span>
+        <span>a</span>
+        <span>p</span>
+        <span>a</span>
+        <span>l</span>
+        <span>e</span>
+        <span>t</span>
+        <span>t</span>
+        <span>e</span>
         <span>d</span>
+        <span>u</span>
+        <span>g</span>
+        <span>o</span>
+        <span>û</span>
+        <span>t</span>
         </div>
     </div>
 
     <!--***** Le Header *****-->
 
     <header class="header">
-
+        <a class="header__link" href="../index.html"><img src="../assets/images/icon/arrow-left.svg" alt=""></span></a>
         <img class="header__logo" src="../assets/images/logo/ohmyfood@2x.svg" alt="logo oh my food">
     </header>
+    <main>
+        <section class="banner1">
+        </section>
+        <!--***** Le Menu *****-->
 
-    <!--***** Le Menu *****-->
+        <section class="menu">
 
-    <section>
-
-    </section>
-
+        </section>
+    </main>
     <!--***** Le Footer *****-->
 
     <footer class="footer">
-        <h4 class="footer__title">ohmyfood</h4>
-        <ul class="footer__list">
-            <li class="footer__list--grand">
-                <a href=""><img src="../assets/images/icon/fork-knife.svg" alt="logo de fouchette et couteau">&nbsp; Proposer un restaurant</a>
-            </li>
-            <li class="footer__list--grand">
-                <a href=""><img src="../assets/images/icon/handshake.svg" alt="logo de poignee de main">&nbsp; Devenir partenaire</a>
-            </li>
-            <li class="footer__list--petit">
-                <a href="">Mentions légales</a>
-            </li>
-            <li class="footer__list--petit">
-                <a href="mailto:contact@ohmyfood.fr">Contact</a>
-            </li>
-        </ul>
+        <div class="footer__container">
+            <h4 class="footer__title">ohmyfood</h4>
+            <ul class="footer__list">
+                <li class="footer__list--grand">
+                    <a href=""><img src="../assets/images/icon/fork-knife.svg" alt="logo de fouchette et couteau">&nbsp; Proposer un restaurant</a>
+                </li>
+                <li class="footer__list--grand">
+                    <a href=""><img src="../assets/images/icon/handshake.svg" alt="logo de poignee de main">&nbsp; Devenir partenaire</a>
+                </li>
+                <li class="footer__list--petit">
+                    <a href="">Mentions légales</a>
+                </li>
+                <li class="footer__list--petit">
+                    <a href="mailto:contact@ohmyfood.fr">Contact</a>
+                </li>
+            </ul>
+        </div>
     </footer>
 </body>
 </html>
