--- a/restaurants/menu1.html
+++ b/restaurants/menu1.html
@@ -46,22 +46,23 @@
     <main id="mission">
 
         <!--***** La Photo *****-->
-    <div class="mission">
-        <div class="text_over">
-        <h2>La palette du goût</h2>
-        <input class="checkbox" id="checkbox3" type="checkbox" />
-        <label for="checkbox3">
-            <svg class="card__icon" viewBox="0 0 22 21" xmlns="http://www.w3.org/2000/svg">
-            <path class="heart" d="M12.2206 2.40576L12.2208 2.40551C14.2226 0.15233 17.4035 -0.169451 19.5243 1.80187C22.0186 4.1243 22.156 8.32326 19.9123 10.8492L19.9122 10.8493L11.5978 20.2148C11.2596 20.5956 10.7372 20.5956 10.399 20.2148L2.0848 10.8495C-0.15494 8.32357 -0.0175439 4.1245 2.47664 1.80201C4.59762 -0.169649 7.78271 0.152585 9.77992 2.40514L9.78047 2.40576L10.627 3.35732L11.0005 3.77727L11.3741 3.35732L12.2206 2.40576Z" fill="none" stroke="#101010"/>
-            <linearGradient id="gradient" x2="0" y2="1">
-                <stop offset="0%" stop-color="var(--btn-purple-dark)" />
-                <stop offset="100%" stop-color="var(--btn-purple-light)" />
-            </linearGradient>
-            </svg>
-        </label>
+        <div class="menu">
+            <div class="menu__main">
+            <h2>La palette du goût</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores quia molestiae provident nisi repellat pariatur porro facilis aperiam voluptate, at aut perferendis quae ducimus aliquid necessitatibus, quidem blanditiis unde magni?</p>
+            <input class="checkbox" id="checkbox3" type="checkbox" />
+            <label for="checkbox3">
+                <svg class="card__icon" viewBox="0 0 22 21" xmlns="http://www.w3.org/2000/svg">
+                <path class="heart" d="M12.2206 2.40576L12.2208 2.40551C14.2226 0.15233 17.4035 -0.169451 19.5243 1.80187C22.0186 4.1243 22.156 8.32326 19.9123 10.8492L19.9122 10.8493L11.5978 20.2148C11.2596 20.5956 10.7372 20.5956 10.399 20.2148L2.0848 10.8495C-0.15494 8.32357 -0.0175439 4.1245 2.47664 1.80201C4.59762 -0.169649 7.78271 0.152585 9.77992 2.40514L9.78047 2.40576L10.627 3.35732L11.0005 3.77727L11.3741 3.35732L12.2206 2.40576Z" fill="none" stroke="#101010"/>
+                <linearGradient id="gradient" x2="0" y2="1">
+                    <stop offset="0%" stop-color="var(--btn-purple-dark)" />
+                    <stop offset="100%" stop-color="var(--btn-purple-light)" />
+                </linearGradient>
+                </svg>
+            </label>
+            </div>
         </div>
-    </div>
-</main>
+    </main>
     
        
     <!--***** Le Footer *****-->
