--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <section class="reservez">
         <h1 class="reservez__title">Réservez le menu qui vous convient</h1>
         <p class="reservez__subtitle">Découvrez des restaurants d’exception, sélectionnés par nos soins.</p>
-        <a class="reservez__btn btn" href="#restaurants">Explorer nos restaurants</a>
+        <a class="reservez__btn" href="#restaurants">Explorer nos restaurants</a>
         
     </section>
 
@@ -55,21 +55,21 @@
         <div class="container">
             <h2 class="fonctionnement__title">Fonctionnement</h2>
             <div class="fonctionnement__wrap">
-                <div class="fonctionnement__btn btn">
+                <div class="fonctionnement__btn">
                     <div class="fonctionnement__btn__numberBox">
                         <span class="fonctionnement__btn__numberBox--number">1</span>
                     </div>
                     <i class="fonctionnement__btn__logo fa-solid fa-mobile-screen-button fa-lg"></i>
                     <p class="fonctionnement__btn__text">Choisissez un restaurant</p>
                 </div>
-                <div class="fonctionnement__btn btn">
+                <div class="fonctionnement__btn">
                     <div class="fonctionnement__btn__numberBox">
                         <span class="fonctionnement__btn__numberBox--number">2</span>
                     </div>
                     <i class="fonctionnement__btn__logo fa-sharp fa-solid fa-list-ul fa-lg"></i>
                     <p class="fonctionnement__btn__text">Composez votre menu</p>
                 </div>
-                <div class="fonctionnement__btn btn">
+                <div class="fonctionnement__btn">
                     <div class="fonctionnement__btn__numberBox">
                         <span class="fonctionnement__btn__numberBox--number">3</span>
                     </div>
@@ -91,8 +91,8 @@
                     <span class="card__nouveau">Nouveau</span>
                     <h3 class="card__title">La palette du goût</h3>
                     <p class="card__subtitle">Ménilmontant</p>
-                    <input class="checkbox" id="checkbox3" type="checkbox">
-                    <label for="checkbox3">
+                    <input class="checkbox" id="checkbox" type="checkbox">
+                    <label for="checkbox">
                         <svg class="card__icon" viewBox="0 0 22 21" xmlns="http://www.w3.org/2000/svg">
                         <path class="heart" d="M12.2206 2.40576L12.2208 2.40551C14.2226 0.15233 17.4035 -0.169451 19.5243 1.80187C22.0186 4.1243 22.156 8.32326 19.9123 10.8492L19.9122 10.8493L11.5978 20.2148C11.2596 20.5956 10.7372 20.5956 10.399 20.2148L2.0848 10.8495C-0.15494 8.32357 -0.0175439 4.1245 2.47664 1.80201C4.59762 -0.169649 7.78271 0.152585 9.77992 2.40514L9.78047 2.40576L10.627 3.35732L11.0005 3.77727L11.3741 3.35732L12.2206 2.40576Z" fill="none" stroke="#101010"/>
                         <linearGradient id="gradient" x2="0" y2="1">
@@ -108,8 +108,8 @@
                     <span class="card__nouveau">Nouveau</span>
                     <h3 class="card__title">La note enchantée</h3>
                     <p class="card__subtitle">Charonne</p>
-                    <input class="checkbox" id="checkbox" type="checkbox">
-                    <label for="checkbox">
+                    <input class="checkbox" id="checkbox1" type="checkbox">
+                    <label for="checkbox1">
                         <svg class="card__icon" viewBox="0 0 22 21" xmlns="http://www.w3.org/2000/svg">
                         <path class="heart" d="M12.2206 2.40576L12.2208 2.40551C14.2226 0.15233 17.4035 -0.169451 19.5243 1.80187C22.0186 4.1243 22.156 8.32326 19.9123 10.8492L19.9122 10.8493L11.5978 20.2148C11.2596 20.5956 10.7372 20.5956 10.399 20.2148L2.0848 10.8495C-0.15494 8.32357 -0.0175439 4.1245 2.47664 1.80201C4.59762 -0.169649 7.78271 0.152585 9.77992 2.40514L9.78047 2.40576L10.627 3.35732L11.0005 3.77727L11.3741 3.35732L12.2206 2.40576Z" fill="none" stroke="#101010"/>
                         </svg>
@@ -120,8 +120,8 @@
                     <a href="./restaurants/menu3.html"><img class="card__img" src="./assets/images/restaurants/francaise-mini.jpg" alt="plat d'une restaurant"></a>
                     <h3 class="card__title">À la française</h3>
                     <p class="card__subtitle">Cité Rouge</p>
-                    <input class="checkbox" id="checkbox1" type="checkbox">
-                    <label for="checkbox1">
+                    <input class="checkbox" id="checkbox2" type="checkbox">
+                    <label for="checkbox2">
                         <svg class="card__icon" viewBox="0 0 22 21" xmlns="http://www.w3.org/2000/svg">
                         <path class="heart" d="M12.2206 2.40576L12.2208 2.40551C14.2226 0.15233 17.4035 -0.169451 19.5243 1.80187C22.0186 4.1243 22.156 8.32326 19.9123 10.8492L19.9122 10.8493L11.5978 20.2148C11.2596 20.5956 10.7372 20.5956 10.399 20.2148L2.0848 10.8495C-0.15494 8.32357 -0.0175439 4.1245 2.47664 1.80201C4.59762 -0.169649 7.78271 0.152585 9.77992 2.40514L9.78047 2.40576L10.627 3.35732L11.0005 3.77727L11.3741 3.35732L12.2206 2.40576Z" fill="none" stroke="#101010"/>
                         </svg>
@@ -132,8 +132,8 @@
                     <a href="./restaurants/menu4.html"><img class="card__img" src="./assets/images/restaurants/delice-mini.jpg" alt="plat d'une restaurant"></a>
                     <h3 class="card__title">Le délice des sens</h3>
                     <p class="card__subtitle">Folie-Méricourt</p>
-                    <input class="checkbox" id="checkbox2" type="checkbox">
-                    <label for="checkbox2">
+                    <input class="checkbox" id="checkbox3" type="checkbox">
+                    <label for="checkbox3">
                         <svg class="card__icon" viewBox="0 0 22 21" xmlns="http://www.w3.org/2000/svg">
                         <path class="heart" d="M12.2206 2.40576L12.2208 2.40551C14.2226 0.15233 17.4035 -0.169451 19.5243 1.80187C22.0186 4.1243 22.156 8.32326 19.9123 10.8492L19.9122 10.8493L11.5978 20.2148C11.2596 20.5956 10.7372 20.5956 10.399 20.2148L2.0848 10.8495C-0.15494 8.32357 -0.0175439 4.1245 2.47664 1.80201C4.59762 -0.169649 7.78271 0.152585 9.77992 2.40514L9.78047 2.40576L10.627 3.35732L11.0005 3.77727L11.3741 3.35732L12.2206 2.40576Z" fill="none" stroke="#101010"/>
                         </svg>
