--- a/restaurants/menu1.html
+++ b/restaurants/menu1.html
@@ -15,33 +15,13 @@
 </head>
 <body>
 
-        <!--***** Le Loader *****-->
-
-    <div class="loader-gout">
-        <div class="loader__palette">
-        <span>L</span>
-        <span>a</span>
-        <span>p</span>
-        <span>a</span>
-        <span>l</span>
-        <span>e</span>
-        <span>t</span>
-        <span>t</span>
-        <span>e</span>
-        <span>d</span>
-        <span>u</span>
-        <span>g</span>
-        <span>o</span>
-        <span>û</span>
-        <span>t</span>
-        </div>
-    </div>
-
         <!--***** Le Header *****-->
 
-    <header class="header">
-        <a class="header__link" href="../index.html"><img src="../assets/images/icon/arrow-left.svg" alt=""></span></a>
-        <img class="header__logo" src="../assets/images/logo/ohmyfood@2x.svg" alt="logo oh my food">
+    <header class="l-header">
+        <div class="nav grid">
+            <a class="nav__link" href="../index.html"><img src="../assets/images/icon/arrow-left.svg" alt=""></a>
+            <img class="nav__logo" src="../assets/images/logo/ohmyfood@2x.svg" alt="logo oh my food">
+        </div>
     </header>
     
     <main class="menuWrapper">
@@ -109,29 +89,30 @@
             </div>
         </div>
         <div class="menuWrapper__box">
-            <h3>Desserts</h3>
+            <h3>Plats</h3>
             <div class="menuBtn">
                 <div class="menuBtn__box">
-                    <h4 class="menuBtn__box--title">Paris-Brest</h4>
-                    <p class="menuBtn__box--text">Revisité</p>
+                    <h4 class="menuBtn__box--title">Filet de bœuf aux herbes</h4>
+                    <p class="menuBtn__box--text">Accompagné de sa ribambelle de légumes</p>
                 </div>
-                <span>18€</span>
-            </div class="menuBtn__box">
+                <span>40€</span>
+            </div>
             <div class="menuBtn">
-                <div>
-                    <h4 class="menuBtn__box--title">Macaron au chocolat d'exception</h4>
-                    <p class="menuBtn__box--text">Et glace à la vanille de Madagascar</p>
+                <div class="menuBtn__box">
+                    <h4 class="menuBtn__box--title">Parmentier de queue de bœuf</h4>
+                    <p class="menuBtn__box--text">À la truffe noire sur sa purée de panais</p>
                 </div>
-                <span>22€</span>
-            </div class="menuBtn__box">
+                <span>35€</span>
+            </div>
             <div class="menuBtn">
-                <div>
-                    <h4 class="menuBtn__box--title">Mousse au chocolat</h4>
-                    <p class="menuBtn__box--text">Au piment d'Espelette et à la truffe noire</p>
+                <div class="menuBtn__box">
+                    <h4 class="menuBtn__box--title">Filet de turbot</h4>
+                    <p class="menuBtn__box--text">Aux agrumes</p>
                 </div>
-                <span>23€</span>
+                <span>44€</span>
             </div>
         </div>
+        
         <a class="btn__commander" href="#restaurants">Commander</a>
         <footer class="footer">
             <div class="container">
