fixer le coeur dans titre menu et terminee le footer

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <!--***** Le Loader *****-->
 
-    <!-- <div class="loader">
+    <div class="loader">
         <div class="loader__text">
         <span>O</span>
         <span>h</span>
@@ -28,13 +28,13 @@
         <span>o</span>
         <span>d</span>
         </div>
-    </div> -->
+    </div>
 
     <!--***** Le Header *****-->
 
     <header class="l-header">
         <div class="nav grid">
-            <a class="nav__link" href="../index.html"><img src="../assets/images/icon/arrow-left.svg" alt=""></a>
+            <a class="nav__link" href="../index.html"><img src="../assets/images/icon/arrow-left.svg" hidden alt="lien icone fleche"></a>
             <img class="nav__logo" src="../assets/images/logo/ohmyfood@2x.svg" alt="logo oh my food">
         </div>
     </header>
