--- a/restaurants/menu1.html
+++ b/restaurants/menu1.html
@@ -115,7 +115,7 @@
         
         <a class="btn__commander" href="#restaurants">Commander</a>
         <footer class="footer">
-            <div class="container">
+            <div class="grid">
                 <h4 class="footer__title">ohmyfood</h4>
                 <ul class="footer__list">
                     <li class="footer__list--grand">
