titre des menu avec border

--- a/restaurants/menu1.html
+++ b/restaurants/menu1.html
@@ -41,7 +41,7 @@
         </div>
 
         <div class="menuWrapper__box">
-            <h3>Entrées</h3>
+            <h3 class="menuWrapper__box--title">Entrées<div class="menuWrapper__box--borderLeft"></div></h3>
             <div class="menuBtn">
                 <div class="menuBtn__box">
                     <h4 class="menuBtn__box--title">Fricassée d'escargots</h4>
@@ -65,7 +65,7 @@
             </div>
         </div>
         <div class="menuWrapper__box">
-            <h3>Plats</h3>
+            <h3 class="menuWrapper__box--title">Plats<div class="menuWrapper__box--borderLeft"></div></h3>
             <div class="menuBtn">
                 <div class="menuBtn__box">
                     <h4 class="menuBtn__box--title">Filet de bœuf aux herbes</h4>
@@ -89,7 +89,7 @@
             </div>
         </div>
         <div class="menuWrapper__box">
-            <h3>Plats</h3>
+            <h3 class="menuWrapper__box--title">Plats<div class="menuWrapper__box--borderLeft"></div></h3>
             <div class="menuBtn">
                 <div class="menuBtn__box">
                     <h4 class="menuBtn__box--title">Filet de bœuf aux herbes</h4>
