--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <header class="l-header">
         <div class="nav grid">
             <a class="nav__link" href="../index.html"><img src="../assets/images/icon/arrow-left.svg" hidden alt="lien icone fleche"></a>
-            <img class="nav__logo" src="../assets/images/logo/ohmyfood@2x.svg" alt="logo oh my food">
+            <img class="nav__logo" src="./assets/images/logo/ohmyfood@2x.svg" alt="logo oh my food">
         </div>
     </header>
 
